--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
          function print(param){
              console.log(param);
          }
-         console.log($(".li2"));
-         console.log($('.li2').toArray());
-         console.log($(".li2").get(3));
-         $('.li2').each(function(item){
-            console.log(item);
-         })
-         console.log($('.li2').filter('#id6'));
-         console.log($('.li2').add('.other'));
-         print($('.li2').is('#id1'));
-         print($('.li2').not(function(idx){return idx == 5}));
-         print($(".li2").not($("#id6")))
-
+        //  F963U F91XX F59Y9 F6211 F6765 F4V86
+        //  console.log($(".li2"));
+        //  console.log($('.li2').toArray());
+        //  console.log($(".li2").get(3));
+        //  $('.li2').each(function(item){
+        //     console.log(item);
+        //  })
+        //  console.log($('.li2').filter('#id6'));
+        //  console.log($('.li2').add('.other'));
+        //  print($('.li2').is('#id1'));
+        //  print($('.li2').not(function(idx){return idx == 5}));
+        //  print($(".li2").not($("#id6")))
+        print($(".li2").eq(-1))
+        $('.li2').parents();
 
     </script>
   </body>
