--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         //  print($(".li2").not($("#id6")))
         print($(".li2").eq(-1))
         $('.li2').parents();
-
+        // $('.li2').html(function(idx,ogl){
+        //       return idx+idx+idx+idx
+        // });
+        // console.log($(".li2").html())
+        console.log($(".li2").text("22333"));
+        console.log($(".li2")[0]);
     </script>
   </body>
 </html>
