--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         // console.log($(".li2").html())
         console.log($(".li2").text("22333"));
         console.log($(".li2")[0]);
+        $(".li2").data('AAA','hhhhh')
+        alert($(".li2").data('AAA'))
     </script>
   </body>
 </html>
