--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         // });
         // console.log($(".li2").html())
         console.log($(".li2").text("22333"));
-        console.log($(".li2")[0]);
+        console.log($(".li2")[0]);f
         $(".li2").data('AAA','hhhhh')
         alert($(".li2").data('AAA'))
     </script>
