lq removeClass addClass hasClass index css offset val

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -40,9 +41,10 @@
         // });
         // console.log($(".li2").html())
         console.log($(".li2").text("22333"));
-        console.log($(".li2")[0]);f
+        console.log($(".li2")[0]);
         $(".li2").data('AAA','hhhhh')
         alert($(".li2").data('AAA'))
+        console.log($('.li2').addClass('li32'))
     </script>
   </body>
 </html>
